# AI_projects

./: README.md
chat_app/: README.md  pyproject.toml
chat_app/src/: app.py
data_analysis_ai_agent/: README.md  pyproject.toml
data_analysis_ai_agent/src/: app.py
text_to_sql/: README.md  pyproject.toml
text_to_sql/app.egg-info/: PKG-INFO  SOURCES.txt
text_to_sql/src/: app.py
text_to_sql/src/database/: create_db.py  student_grades.db
