[project]
name = "data-analysis-ai-agent"
version = "0.1.0"
description = "Data analysis AI agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
]
